apps/teslamate/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: teslamate
    app.kubernetes.io/name: teslamate
  name: teslamate
  namespace: teslamate
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: main
      app.kubernetes.io/instance: teslamate
      app.kubernetes.io/name: teslamate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: teslamate
        app.kubernetes.io/name: teslamate
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: DATABASE_HOST
          value: teslamate-db-main-rw.teslamate.svc.cluster.local
        - name: DISABLE_MQTT
          value: "false"
        - name: MQTT_HOST
          value: nats-headless.mqtt.svc.cluster.local
        - name: MQTT_USERNAME
          value: mqtt
        - name: TZ
          value: America/Chicago
        image: teslamate/teslamate:4.3.0
        name: main
        resources:
          requests:
            cpu: 25m
            memory: 300Mi
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
