apps/teslamate/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: teslamate
    app.kubernetes.io/name: teslamate
    app.kubernetes.io/service: teslamate
  name: teslamate
  namespace: teslamate
spec:
  ports:
  - name: http
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: teslamate
    app.kubernetes.io/name: teslamate
  type: ClusterIP
