apps/teslamate/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
  labels:
    app.kubernetes.io/instance: teslamate
    app.kubernetes.io/name: teslamate
    external-dns.invertedorigin.com/enabled: "true"
  name: teslamate
  namespace: teslamate
spec:
  ingressClassName: cilium
  rules:
  - host: teslamate.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: teslamate
            port:
              number: 4000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - teslamate.invertedorigin.com
    secretName: teslamate-tls-domain
